# seo-agency

./: .env.example  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  requirements.txt  test_llm.py
agents/: __init__.py  analytics.py  ceo.py  competitor_analysis.py  content_writer.py  github_manager.py  image_seo.py  internal_linking.py  keyword_research.py  qa.py  qa_engineer.py  schema.py  seo_developer.py  seo_director.py  seo_optimizer.py  technical_seo.py
clients/gta-scrub/profile/: client.json
config/: __init__.py  agents.yaml  settings.py  tasks.yaml
src/seo_agency/: crew.py  main.py
src/seo_agency/config/: agents.yaml  tasks.yaml
tools/: __init__.py  browser_tool.py  client_memory.py  file_editor.py  git_manager.py  github_tool.py  llm.py  memory.py  qa_runner.py  repo_analyzer.py  search_tool.py  seo_audit.py  seo_tool.py  swarm_logger.py
ui/: app.py
workflows/: __init__.py  analyze_gta_scrub.py  autonomous_pipeline.py  execute_links.py  pipeline.py  run_seo_audit.py  seo_campaign.py  test_auto_merge.py  test_competitor.py  test_content.py  test_developer.py  test_director.py  test_edit.py  test_edit_and_qa.py  test_github.py  test_github_connection.py  test_keyword.py  test_memory.py  test_qa.py  test_schema.py  test_technical_seo.py  write_blog.py
